# DistroChat

./: README.md
FriendService/: CMakeLists.txt
FriendService/example/: CMakeLists.txt  caller.cpp
FriendService/include/: friendService.h  public.h
FriendService/src/: CMakeLists.txt  friendService.cpp  run.cpp
FriendService/src/model/: friendmodel.cpp  uesrmodel.cpp
FriendService/src/proto/: friendService.pb.cc
GroupService/: CMakeLists.txt
GroupService/example/: CMakeLists.txt  caller.cpp
GroupService/include/: groupService.h
GroupService/src/: CMakeLists.txt  groupService.cpp  run.cpp
GroupService/src/model/: groupmodel.cpp
GroupService/src/proto/: groupService.pb.cc
OfflinemsgService/: CMakeLists.txt  readme.md
OfflinemsgService/example/: CMakeLists.txt  caller.cpp
OfflinemsgService/include/: offlinemsgService.h  public.h
OfflinemsgService/src/: CMakeLists.txt  offlinemsgService.cpp  run.cpp
OfflinemsgService/src/model/: offlinemessagemodel.cpp
OfflinemsgService/src/proto/: offlinemsgService.pb.cc
ProxyService/: CMakeLists.txt  README.md
ProxyService/example/: CMakeLists.txt  test.cpp
ProxyService/include/: ProxyServer.txt  ProxyService.txt  proxyserver.h  proxyservice.h  public.h
ProxyService/src/: CMakeLists.txt  ProxyServer.txt  ProxyService.txt  main.txt  proxyserver.cpp  proxyservice.cpp  run.cpp
ProxyService/src/proto/: proxyserver.pb.cc  userService.pb.cc
ProxyService/src/redis/: redis.cpp
UserService/: CMakeLists.txt
UserService/example/: CMakeLists.txt  caller.cpp
UserService/include/: public.h  userService.h
(+30 files in other folders)
